2013-07-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57947
	* g++.dg/parse/crash63.C: New.

2013-07-30  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57530
	* gfortran.dg/pointer_assign_8.f90: New.
	* gfortran.dg/pointer_assign_9.f90: New.
	* gfortran.dg/pointer_assign_10.f90: New.
	* gfortran.dg/pointer_assign_11.f90: New.

2013-07-30  Zhenqiang Chen  <zhenqiang.chen@linaro.org>

	* gcc.target/arm/pr57637.c: New testcase.

2013-07-29  Bill Schmidt  <wschmidt@vnet.linux.ibm.com>

	PR tree-optimization/57993
	* gcc.dg/torture/pr57993.c: New test.

2013-07-29  Joern Rennecke  <joern.rennecke@embecosm.com>

	* gcc.dg/tree-ssa/pr44258.c: Disable scan test for Epiphany.

2013-07-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57948
	* g++.dg/conversion/ambig2.C: New.

2013-07-29  Maciej W. Rozycki  <macro@codesourcery.com>

	* gcc.target/mips/fabs-2008.c: New test case.
	* gcc.target/mips/fabs-legacy.c: New test case.
	* gcc.target/mips/fabsf-2008.c: New test case.
	* gcc.target/mips/fabsf-legacy.c: New test case.
	* gcc.target/mips/fneg-2008.c: New test case.
	* gcc.target/mips/fneg-legacy.c: New test case.
	* gcc.target/mips/fneg-2008.c: New test case.
	* gcc.target/mips/fneg-legacy.c: New test case.
	* gcc.target/mips/nan-2008.c: New test case.
	* gcc.target/mips/nan-legacy.c: New test case.
	* gcc.target/mips/nanf-2008.c: New test case.
	* gcc.target/mips/nanf-legacy.c: New test case.
	* gcc.target/mips/nans-2008.c: New test case.
	* gcc.target/mips/nans-legacy.c: New test case.
	* gcc.target/mips/nansf-2008.c: New test case.
	* gcc.target/mips/nansf-legacy.c: New test case.
	* gcc.target/mips/mips.exp: Handle `-mabs=' and `-mnan='.

2013-07-29  Alexander Ivchenko  <alexander.ivchenko@intel.com>
	    Maxim Kuvyrkov  <maxim@kugelworks.com>

	* lib/target-supports.exp (check_effective_target_non_bionic): New
	effective-target test.
	* g++.dg/tls/thread_local4.C: Disable test for Bionic.
	* g++.dg/tls/thread_local4g.C: Ditto.
