@@ -1,3 +1,10 @@
+2013-07-30  Steve Ellcey  <sellcey@mips.com>
+
+	* gcc.target/mips/code-readable-1.c: Increase switch size.
+	* gcc.target/mips/code-readable-2.c: Ditto.
+	* gcc.target/mips/code-readable-3.c: Ditto.
+	* gcc.target/mips/code-readable-4.c: Ditto.
+
 2013-07-30  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/57947
